# mcp-blu

./: .env.example  .gitignore  README.md  dijkstra_demo.py  docker-compose.yml  queries_demo.txt  route_server.py  schema.md
db/init/: 001_init.sql
db/seeds/: 001_seed.sql  002_rich_seed.sql  003_robot_demo_lab.sql
docs/: GRAFO_FUNCIONAMIENTO.md
mcp-server/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
